--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node testApp.js"
   },
   "dependencies": {
-    "evejs":"latest"
+//    "evejs":"latest"
   },
   "engines": {
     "node": "0.10.x"
