--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node proxy.js"
   },
   "dependencies": {
-    "evejs": "0.4.6-test"
+    "evejs": "0.4.6-test",
+    "path":"latest"
   },
   "engines": {
     "node": "0.10.x"
