--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node proxy.js"
   },
   "dependencies": {
-    "evejs": "0.4.6-test",
-    "path":"latest"
+    "evejs": "0.4.6-test"
   },
   "engines": {
     "node": "0.10.x"
